--- a/Cart.html
+++ b/Cart.html
@@ -37,21 +37,18 @@
             </a>
             <div class="header__header-elements">
                 <input class="header__search search header__search--responsive-element" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <a class="header__icons icons" name="card">
-                    <i class="fas fa-shopping-cart"></i>
-                </a>
                 <a class="header__icons icons header__icons--responsive-element" name="profile" href="#login">
                     <i class="fas fa-user-circle"></i>
                 </a>
             </div>
         </header>
 
-        <div class="content">
+        <div class="content content--reverse">
             <aside>
                 Bsaket Summary
                 (<span id="QuantityOfGoodsInTheCart">2 items</span>)
                 <p class="totalCostInCartOfGoods"><b>$768</b></p>
-                <button>Proceed to CheckOut</button>
+                <a href="shipping-Address.html"><button>Proceed to CheckOut</button></a>
             </aside>
             <main class="main">
                     <div class="good">
@@ -125,8 +122,8 @@
                 </div>
                 <div id="totalCostUnderGoods">
                     Total: <span class="totalCostInCartOfGoods">$768</span>
-                    <button>Continue shopping</button>
-                    <button>Proceed to Checkout</button>
+                    <a href="categories-grid.html"><button>Continue shopping</button></a>
+                    <a href="shipping-Address.html"><button>Proceed to Checkout</button></a>
                 </div>
             </main>
         </div>
