--- a/Items-grid.html
+++ b/Items-grid.html
@@ -60,62 +60,62 @@
         <main class="main">    
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html"class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             <div class="category category--good-size">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="category__pic-of-category">
-                <h3><a class="NameOfGood">Nexus 7</a></h3>
+                <h3><a href="item-card.html" class="NameOfGood">Nexus 7</a></h3>
                 <b class="priceOfGood">$555</b>
             </div>
             
