--- a/categories-grid.html
+++ b/categories-grid.html
@@ -37,7 +37,7 @@
             </a>
             <div class="header__header-elements">
                 <input class="header__search search header__search--responsive-element" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <a class="header__icons icons" name="card">
+                <a class="header__icons icons" name="card" href="cart.html">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
                 <a class="header__icons icons header__icons--responsive-element" name="profile" href="#login">
