--- a/item-card.html
+++ b/item-card.html
@@ -37,7 +37,7 @@
             </a>
             <div class="header__header-elements">
                 <input class="header__search search header__search--responsive-element" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <a class="header__icons icons" name="card">
+                <a class="header__icons icons" name="card" href="cart.html">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
                 <a class="header__icons icons header__icons--responsive-element" name="profile" href="#login">
@@ -69,7 +69,7 @@
                     Price<b>$555</b>
                     <form>
                         Quantity
-                        <input class="cost-block__quantity--responsive-element"type="number" pattern=".{0,}">
+                        <input class="cost-block__quantity--responsive-element"type="number" required value="1">
                         <button type="submit" class="cost-block__submit-button--responsive-element">Add to cart</button>
                     </form>
                 </div>
