--- a/item-card.html
+++ b/item-card.html
@@ -11,12 +11,14 @@
         <div class="popup popup--zoom-popup">
             <div id="login" class="login-form popup__login-form popup__login-form--show-popup">
                 <a class="popup__x popup__x--responsive-element" href="">x</a>
-                Please Sign In
                 <form>
+                    Please Sign In
                     <input type="email" class="popup__form-element popup__form-element--responsive-element" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
                     <input type="password" class="popup__form-element popup__form-element--responsive-element" name="password" placeholder="password" required pattern=".{1,}"> <br>
-                    <input type="checkbox" class="popup__form-element popup__form-element--responsive-element" name="Remember me">
-                    Remember me
+                    <p>
+                        <input type="checkbox" class="popup__form-element popup__form-element--responsive-element" name="Remember me">
+                        Remember me
+                    </p>
                     <button type="submit" class="popup__form-element popup__form-element--responsive-element">Sign In</button>
                 </form>
                 <a href="#register" class="popup__link--responsive-element">Register</a>
@@ -46,19 +48,17 @@
             </div>
         </header>
         <main class="main">
-            <div>
+            <div class='slider'>
                 <p><span>Electronics</span> | <span>Nexus 7</span></p>
-                <div class="slider">
-                    <img class="slider__main-slide" name="main-pic-of-good" src="./pics/cart/googlenexus6p-1024x768.jpg">
-                    <div>
-                        <button name><i class="fas fa-arrow-left"></i></button>
-                        <img name="slide" class="slider__small-slide" src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <img name="slide" class="slider__small-slide" src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <img name="slide" class="slider__small-slide" src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <img name="slide" class="slider__small-slide" src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <img name="slide" class="slider__small-slide" src="./pics/cart/googlenexus6p-1024x768.jpg">
-                        <button name><i class="fas fa-arrow-right"></i></button>
-                    </div>    
+                <div class='slider__big-image' id="dropBigImage">
+                </div>
+                <div class='slider__conteiner-for-small-photos'id="container" onclick="slider.changeByClick(event)">
+                    <button class="slider__arrow-left">
+                        <
+                    </button>
+                    <button class="slider__arrow-right">
+                        >
+                    </button>
                 </div>
             </div>
             <div class="good-information">
@@ -81,5 +81,6 @@
             </div>
         </main>
         <footer class="footer"><p>©</p></footer>
+        <script src="./scripts/slider.js"></script>
     </body>
 </html>
