--- a/item-card.html
+++ b/item-card.html
@@ -6,31 +6,34 @@
         <link rel="stylesheet" href="./artifacts/main.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script
+        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+        crossorigin="anonymous"></script>
     </head>
     <body class="body">
         <div class="popup popup--zoom-popup">
-            <div id="login" class="login-form popup__login-form popup__login-form--show-popup">
+            <div id="login" class="popup__form popup__form--show-popup">
                 <a class="popup__x popup__x--responsive-element" href="">x</a>
+                Please Sign In
                 <form>
-                    Please Sign In
+                    
                     <input type="email" class="popup__form-element popup__form-element--responsive-element" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
                     <input type="password" class="popup__form-element popup__form-element--responsive-element" name="password" placeholder="password" required pattern=".{1,}"> <br>
-                    <p>
-                        <input type="checkbox" class="popup__form-element popup__form-element--responsive-element" name="Remember me">
-                        Remember me
-                    </p>
+                    <input type="checkbox" class="popup__form-element popup__form-element--responsive-element" name="Remember me">
+                    Remember me
                     <button type="submit" class="popup__form-element popup__form-element--responsive-element">Sign In</button>
                 </form>
-                <a href="#register" class="popup__link--responsive-element">Register</a>
+                <a class="popup-link popup__link--responsive-element">Register</a>
             </div>
-            <div id="register" class="registration-form popup__registration-form popup__registration-form--show-popup">
+            <div id="register" class="popup__form popup__form--show-popup">
                 <a class="popup__x popup__x--responsive-element" href="">x</a>
                 <form>
                     <input type="email" class="popup__form-element popup__form-element--responsive-element" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
                     <input type="password" class="popup__form-element popup__form-element--responsive-element" name="password" placeholder="password" required pattern=".{1,}"> <br>
                     <button type="submit" class="popup__form-element popup__form-element--responsive-element">Registration</button>
                 </form>
-                <a href="#login" class="popup__link--responsive-element">Sign In</a>
+                <a class="popup-link popup__link--responsive-element">Sign In</a>
             </div>
         </div>  
         <header class="header body__header">
@@ -42,7 +45,7 @@
                 <a class="header__icons icons" name="card" href="cart.html">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
-                <a class="header__icons icons header__icons--responsive-element" name="profile" href="#login">
+                <a class="popup-link header__icons icons header__icons--responsive-element" name="profile">
                     <i class="fas fa-user-circle"></i>
                 </a>
             </div>
@@ -82,5 +85,6 @@
         </main>
         <footer class="footer"><p>©</p></footer>
         <script src="./scripts/slider.js"></script>
+        <script src="./scripts/popup.js"></script>
     </body>
 </html>
