--- a/index.html
+++ b/index.html
@@ -16,19 +16,16 @@
         <div class="popup popup--zoom-popup"></div>  
 
         <header class="header body__header"></header>
-    <script>
-        var tmpl = _.template('./tpl/categories-grid.html'.innerHTML);
-                        
-        var result = tmpl({ title: "Заполнение товарами" });
-    
-        document.write(result);
-    </script>
-    <footer class="footer">©</footer>
-    <script src='./tpl/header.tpl.js'></script>
-    <script src='./tpl/popup.tpl.js'></script>
-    <script src='./scripts/objects/categoriesObject.js'></script>
-    <script src='./scripts/objects/goodObject.js'> </script>
-    <script src='./scripts/categories.js'></script>
-    <script src="./scripts/popup.js"></script>
+        <script>
+
+        </script>
+        <footer class="footer">©</footer>
+        <script src='./tpl/header.tpl.js'></script>
+        <script src='./tpl/popup.tpl.js'></script>
+        <script src='./scripts/objects/categoriesObject.js'></script>
+        <script src='./scripts/objects/goodObject.js'> </script>
+        <script src='./scripts/categories.js'></script>
+        <script src="./scripts/popup.js"></script>
+        <script src='./scripts/index.js'></script>
     </body>
 </html>
