--- a/index.html
+++ b/index.html
@@ -159,5 +159,6 @@
         <script src='./scripts/categories.js'></script>
         <script src="./scripts/popup.js"></script>
         <script src='./scripts/index.js'></script>
+        <script src='./js/bundle.js'></script>
     </body>
 </html>
