started to make templates out of main.js

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title> index </title>
-        <link rel="stylesheet" href="./artifacts/main.css">
+        <!-- <link rel="stylesheet" href="./artifacts/main.css"> -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script
+        <!-- <script
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-        crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.js"></script>
-        <script src="./scripts/objects/categoriesObject.js"></script>
+        crossorigin="anonymous"></script> -->
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.js"></script> -->
+        <!-- <script src="./scripts/objects/categoriesObject.js"></script> -->
         <!-- <script src='./scripts/min-min.js'></script> -->
         <!-- <script src='./scripts/slider.js'></script> -->
     </head>
@@ -19,31 +19,8 @@
         <div class="popup popup--zoom-popup"></div>  
 
         <header class="header body__header"></header>
-        <div class="global-conteiner">
-            <main class="main"></main>
-            <!-- <div class="search__results"></div> -->
-<!-- 
-            <script type="text/template" id="categories">
-                <div class="category category--category-size" id="<%- i %>">
-                    <img alt="photo of category" class="category__pic-of-category" src="<%= products[i].photo %>">
-                    <span><%= products[i].name%> (<%=products[i].goods.length%>)</span>
-                </div>
-            </script> -->
-
-            <script type="text/template" id="items-grid">
-                <div class="change-view" id=""><a class="icons header__icons--responsive-element">List View</a></div>
-                <div class="content">
-                    <nav class="widget">
-                        <h3 class="widget__title">Категории</h3>
-                        <ul class="widget__list">
-                        </ul>
-                    </nav>
-                    <h1></h1>
-                    <main class="main">
-
-                    </main>
-                </div>
-            </script>
+        <!-- <div class="global-conteiner"> -->
+            <main class="main"> </main>
             <script type="text/template" id="goods-in-grid">
                 <div class="category category--good-size" id="<%- j %>">
                     <img alt="photo of good" src="<%= products[i].goods[j].photo %>"class="category__pic-of-category">
@@ -105,7 +82,7 @@
         <script src='./tpl/popup.tpl.js'></script>
         <script src="./scripts/popup.js"></script>       
         <script src='./scripts/index.js'></script> -->
-        <script src='./.build/bundle.js'></script>
+        <script src='./.build/bundle.js'></script> 
 
         
     </body>
