--- a/.build/index.html
+++ b/.build/index.html
@@ -14,7 +14,7 @@
         <!-- <script src="./scripts/objects/categoriesObject.js"></script> -->
         <!-- <script src='./scripts/min-min.js'></script> -->
         <!-- <script src='./scripts/slider.js'></script> -->
-    </head>
+    <link href=".main.css" rel="stylesheet"></head>
     <body class="body">
         <div class="popup popup--zoom-popup"></div>  
 
@@ -28,7 +28,7 @@
         <script src='./tpl/popup.tpl.js'></script>
         <script src="./scripts/popup.js"></script>       
         <script src='./scripts/index.js'></script> -->
-        <script src='./.build/bundle.js'></script> 
+        <!-- <script src='./.build/bundle.js'></script>  -->
 
         
     <script type="text/javascript" src="bundle.js"></script></body>
