--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <script src='./tpl/popup.tpl.js'></script>
         <script src="./scripts/popup.js"></script>       
         <script src='./scripts/index.js'></script> -->
-        <script src='./.build/bundle.js'></script> 
+        <!-- <script src='./.build/bundle.js'></script>  -->
 
         
     </body>
