--- a/index.html
+++ b/index.html
@@ -19,9 +19,22 @@
         <div class="popup popup--zoom-popup"></div>  
 
         <header class="header body__header"></header>
-        <!-- <div class="global-conteiner"> -->
-            <main class="main"> </main>
-
+        <div class="change-view">
+            <!-- <a class="icons header__icons--responsive-element">
+                List View
+            </a> -->
+        </div>
+        <div class="content">
+            <!-- <nav class="widget">
+                 <h3 class="widget__title">Категории</h3>
+                <ul class="widget__list">
+                </ul> 
+            </nav>
+            <h1></h1> -->
+            <main class="main goods-range">
+                
+            </main>
+        </div>
         <footer class="footer">©</footer>
         <!-- <script src='./tpl/header.tpl.js'></script>
         <script src='./scripts/search.js'></script>
