grid list alive

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
             </a> -->
         </div>
         <div class="content">
+            <div id='widgetConteiner'> 
             <!-- <nav class="widget">
                  <h3 class="widget__title">Категории</h3>
                 <ul class="widget__list">
                 </ul> 
             </nav>
             <h1></h1> -->
+            </div> 
             <main class="main goods-range">
                 
             </main>
